# ImScope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: scope.h  trace.h  ui.h  wavegen.h
src/: main.cpp  scope.cpp  ui.cpp
